Refactor command classes and update configuration placeholders