@@ -1,6 +1,11 @@
 package dev.tvrz.pillars.commands;
 
+import dev.tvrz.pillars.managers.UtilsManager;
+import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.minimessage.tag.resolver.Placeholder;
+import net.kyori.adventure.text.serializer.plain.PlainTextComponentSerializer;
 import org.bukkit.*;
+import org.bukkit.attribute.Attribute;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandExecutor;
 import org.bukkit.command.CommandSender;
@@ -22,11 +27,13 @@ import com.alessiodp.parties.api.interfaces.PartiesAPI;
 import com.alessiodp.parties.api.interfaces.Party;
 
 import net.kyori.adventure.text.minimessage.MiniMessage;
+import org.checkerframework.checker.nullness.qual.NonNull;
 
-import static dev.tvrz.pillars.utils.*;
-import static org.bukkit.Bukkit.getLogger;
+import static dev.tvrz.pillars.managers.UtilsManager.*;
 
-public class pillars implements CommandExecutor, TabCompleter {
+public class PillarsCommand implements CommandExecutor, TabCompleter {
+
+    private static final MiniMessage MM = MiniMessage.miniMessage();
 
     private static JavaPlugin plugin = null;
     private static PartiesAPI partiesAPI;
@@ -44,8 +51,8 @@ public class pillars implements CommandExecutor, TabCompleter {
 
     private static final Map<String, List<String>> SETTINGS = new HashMap<>();
 
-    public pillars(JavaPlugin plugin) {
-        this.plugin = plugin;
+    public PillarsCommand(JavaPlugin plugin) {
+        PillarsCommand.plugin = plugin;
         partiesAPI = Parties.getApi();
     }
 
@@ -72,7 +79,7 @@ public class pillars implements CommandExecutor, TabCompleter {
     }
 
     @Override
-    public List<String> onTabComplete(CommandSender sender, Command command, String alias, String[] args) {
+    public List<String> onTabComplete(@org.jspecify.annotations.NonNull CommandSender sender, @NonNull Command command, @NonNull String alias, String @NonNull [] args) {
 
         if (args.length <= 1) {
             return null;
@@ -128,9 +135,9 @@ public class pillars implements CommandExecutor, TabCompleter {
     }
 
     @Override
-    public boolean onCommand(CommandSender sender, Command command, String label, String[] args) {
+    public boolean onCommand(@org.jspecify.annotations.NonNull CommandSender sender, @NonNull Command command, @NonNull String label, @NonNull String[] args) {
         if (args.length < 1) {
-            sender.sendMessage(ChatColor.RED + "Используйте: /pillars <ID игры> [параметры]");
+            sender.sendMessage(MM.deserialize("<red>Используйте: /pillars <ID игры> [параметры]>"));
             return true;
         }
         Bukkit.getScheduler().runTaskAsynchronously(plugin, () -> {
@@ -141,16 +148,18 @@ public class pillars implements CommandExecutor, TabCompleter {
 
             File dataFolder = new File(plugin.getDataFolder(), "modes");
             if (!dataFolder.exists()) {
-                dataFolder.mkdirs();
+                if (!dataFolder.mkdirs()) {
+                    plugin.getLogger().warning("Failed to create modes folder");
+                }
             }
 
             File file = new File(dataFolder, settings.getOrDefault("mode", "items")+".yml");
             if (!file.exists()) {
-                sender.sendMessage("Ошибка: Не удалось загрузить режим " + settings.getOrDefault("mode", "items"));
+                sender.sendMessage(MM.deserialize("<red>Ошибка: Не удалось загрузить режим " + settings.getOrDefault("mode", "items")));
                 return;
             }
             if (!CopyWorldFolder(settings.getOrDefault("world", "world"), worldName)) {
-                sender.sendMessage("Ошибка: не удалось скопировать мир " + settings.getOrDefault("world", "world"));
+                sender.sendMessage(MM.deserialize("<red>Ошибка: не удалось скопировать мир " + settings.getOrDefault("world", "world")));
                 return;
             }
 
@@ -159,7 +168,7 @@ public class pillars implements CommandExecutor, TabCompleter {
 
             CompletableFuture<Void> future = new CompletableFuture<>();
             Bukkit.getScheduler().runTask(plugin, () -> {
-                Boolean successful = СreateWorld(
+                Boolean successful = CreateWorld(
                         worldName,
                         Integer.parseInt(settings.getOrDefault("deathSpawnX", "0")),
                         Integer.parseInt(settings.getOrDefault("deathSpawnY", Integer.toString(Integer.parseInt(settings.getOrDefault("spawnY", "10")) + 15))),
@@ -169,7 +178,7 @@ public class pillars implements CommandExecutor, TabCompleter {
                         Integer.parseInt(settings.getOrDefault("borderTime", "600"))
                 );
                 if (!successful) {
-                    sender.sendMessage("Ошибка: не удалось загрузить скопированный мир " + worldName);
+                    sender.sendMessage(MM.deserialize("<red>Ошибка: не удалось загрузить скопированный мир " + worldName));
                 }
                 future.complete(null);
             });
@@ -191,23 +200,20 @@ public class pillars implements CommandExecutor, TabCompleter {
                 partyFetchAttempts++;
             }
             if (party == null) {
-                sender.sendMessage(ChatColor.RED + "Ошибка: не удалось получить пати " + partyName);
+                sender.sendMessage(MM.deserialize("<red>Ошибка: не удалось получить пати " + partyName));
                 return;
             }
-            final List<UUID> gamePartyList = new ArrayList<>();
-            getLogger().info(party.getMembers().toString());
-            gamePartyList.addAll(party.getMembers());
+            plugin.getLogger().info(party.getMembers().toString());
+            final List<UUID> gamePartyList = new ArrayList<>(party.getMembers());
             gameProgress.put(worldName, new int[]{0, gamePartyList.size()});
-            Bukkit.getScheduler().runTask(plugin, () -> {
-                InitPlayerSpawns(
-                        worldName,
-                        gamePartyList,
-                        (double) Integer.parseInt(settings.getOrDefault("circleDiameter", "0")),
-                        Integer.parseInt(settings.getOrDefault("spawnY", "10")),
-                        Integer.parseInt(settings.getOrDefault("pillarHeight", "10")),
-                        settings.getOrDefault("pillarsBlocks", "bedrock").toUpperCase()
-                );
-            });
+            Bukkit.getScheduler().runTask(plugin, () -> InitPlayerSpawns(
+                    worldName,
+                    gamePartyList,
+                    (double) Integer.parseInt(settings.getOrDefault("circleDiameter", "0")),
+                    Integer.parseInt(settings.getOrDefault("spawnY", "10")),
+                    Integer.parseInt(settings.getOrDefault("pillarHeight", "10")),
+                    settings.getOrDefault("pillarsBlocks", "bedrock").toUpperCase()
+            ));
             StartGame(partyName, settings);
         });
         return true;
@@ -223,78 +229,98 @@ public class pillars implements CommandExecutor, TabCompleter {
             } catch (InterruptedException e) {
                 throw new RuntimeException(e);
             }
-            List<UUID> playerList = Bukkit.getWorld(worldName).getPlayers().stream()
-                    .map(Player::getUniqueId)
-                    .toList();
-            if (playerList.containsAll(party.getMembers())) {
-                break;
+            World world = Bukkit.getWorld(worldName);
+            if (world != null) {
+                List<UUID> playerList = world.getPlayers().stream()
+                        .map(Player::getUniqueId)
+                        .toList();
+                assert party != null;
+                if (new HashSet<>(playerList).containsAll(party.getMembers())) {
+                    break;
+                }
             }
         }
 
         ConfigurationSection mode = GetModeSection(settings.getOrDefault("mode", "items"));
         if (mode == null) {
-            getLogger().warning("Не удалось загрузить режим: " + settings.getOrDefault("mode", "items"));
+            plugin.getLogger().warning("Не удалось загрузить режим: " + settings.getOrDefault("mode", "items"));
             Bukkit.getScheduler().runTask(plugin, () -> DeleteWorld(worldName));
             return;
         }
 
         ConfigurationSection startTitles = mode.getConfigurationSection("start-titles");
         PlayTitles(worldName, startTitles, null, null, "sequence");
-        Bukkit.getScheduler().runTaskAsynchronously(plugin, () -> {
-            PlayTitles(worldName, startTitles, null, null, "after");
-        });
+        Bukkit.getScheduler().runTaskAsynchronously(plugin, () -> PlayTitles(worldName, startTitles, null, null, "after"));
 
-        for (UUID playerUUID : party.getMembers()) {
-            Player player = Bukkit.getPlayer(playerUUID);
+        if (party != null) {
+            for (UUID playerUUID : party.getMembers()) {
+                Player player = Bukkit.getPlayer(playerUUID);
             if (player == null || !player.isOnline()) {
                 continue;
             }
             player.getInventory().clear();
             player.getEnderChest().clear();
-            player.setHealth(player.getMaxHealth());
-            player.setFoodLevel(20);
-            player.setSaturation(5.0f);
-            player.getActivePotionEffects().forEach(effect -> player.removePotionEffect(effect.getType()));
-            if (!mode.getBoolean("block-move.enabled", false)) {
-                blockedUUIDs.remove(playerUUID);
-            } else {
-                Bukkit.getScheduler().runTaskLaterAsynchronously(plugin, () -> {
-                    blockedUUIDs.remove(playerUUID);
-                }, mode.getInt("block-move.duration") * 20L);
+            var maxHealthAttr = player.getAttribute(Attribute.MAX_HEALTH);
+            if (maxHealthAttr != null) {
+                double maxHealth = maxHealthAttr.getDefaultValue();
+                if (maxHealth > 0) {
+                    player.setHealth(maxHealth);
+                }
             }
-            Bukkit.getScheduler().runTask(plugin, () -> {
-                FillRegion(worldName, (int) (player.getX()-2), Integer.parseInt(settings.getOrDefault("spawnY", "10")) + 3, (int) (player.getZ()-2), (int) (player.getX()+2), Integer.parseInt(settings.getOrDefault("spawnY", "10")) + 7, (int) (player.getZ()+2), Material.AIR);
-            });
+            player.setFoodLevel(20);
+                player.setSaturation(5.0f);
+                player.getActivePotionEffects().forEach(effect -> player.removePotionEffect(effect.getType()));
+                if (!mode.getBoolean("block-move.enabled", false)) {
+                    blockedUUIDs.remove(playerUUID);
+                } else {
+                    Bukkit.getScheduler().runTaskLaterAsynchronously(plugin, () -> blockedUUIDs.remove(playerUUID), mode.getInt("block-move.duration") * 20L);
+                }
+                Bukkit.getScheduler().runTask(plugin, () -> FillRegion(worldName, (int) (player.getX()-2), Integer.parseInt(settings.getOrDefault("spawnY", "10")) + 3, (int) (player.getZ()-2), (int) (player.getX()+2), Integer.parseInt(settings.getOrDefault("spawnY", "10")) + 7, (int) (player.getZ()+2), Material.AIR));
+            }
         }
 
         if (mode.getBoolean("potion-effects.enabled", false)) {
-            GivePotionEffects(worldName, mode.getConfigurationSection("potion-effects"), null);
+            ConfigurationSection potionSection = mode.getConfigurationSection("potion-effects");
+            if (potionSection != null) {
+                GivePotionEffects(worldName, potionSection, null);
+            }
         }
 
         StartGameItemsCycle(worldName, settings.getOrDefault("debugMode", "false").equals("true"), settings, mode);
 
         Map<String, String> placeholders = new HashMap<>();
-        List<Player> alivePlayers = Bukkit.getWorld(worldName).getPlayers().stream()
-                .filter(player -> player.getGameMode() == GameMode.SURVIVAL)
-                .collect(Collectors.toList());
-        if (!alivePlayers.isEmpty()) {
-            ConfigurationSection endTitles = mode.getConfigurationSection("end-titles.win");
-            placeholders.put("player", alivePlayers.getFirst().getName());
-            PlayTitles(worldName, endTitles, placeholders, null, "sequence");
-        } else {
-            ConfigurationSection endTitles = mode.getConfigurationSection("end-titles.draw");
-            PlayTitles(worldName, endTitles, null, null, "sequence");
-        }
+        World gameWorld = Bukkit.getWorld(worldName);
+        if (gameWorld != null) {
+            List<Player> alivePlayers = gameWorld.getPlayers().stream()
+                    .filter(player -> player.getGameMode() == GameMode.SURVIVAL)
+                    .toList();
+            if (!alivePlayers.isEmpty()) {
+                ConfigurationSection endTitles = mode.getConfigurationSection("end-titles.win");
+                placeholders.put("player", alivePlayers.getFirst().getName());
+                PlayTitles(worldName, endTitles, placeholders, null, "sequence");
+            } else {
+                ConfigurationSection endTitles = mode.getConfigurationSection("end-titles.draw");
+                PlayTitles(worldName, endTitles, null, null, "sequence");
+            }
 
-        for (Player player : Bukkit.getWorld(worldName).getPlayers()) {
-            player.getInventory().clear();
-            player.getEnderChest().clear();
+            for (Player player : gameWorld.getPlayers()) {
+                player.getInventory().clear();
+                player.getEnderChest().clear();
+            }
         }
 
         ConfigurationSection velocity = config.getConfigurationSection("velocity");
         if (velocity != null && velocity.getBoolean("enabled", false) && velocity.getBoolean("connect-to-lobby-on-game-end", false)) {
-            for (Player player : Bukkit.getWorld(worldName).getPlayers()) {
-                if (player != null) sendPlayerToServer(player, velocity.get("velocity-lobby").toString());
+            World playerWorld = Bukkit.getWorld(worldName);
+            if (playerWorld != null) {
+                for (Player player : playerWorld.getPlayers()) {
+                    if (player != null) {
+                        Object velocityLobby = velocity.get("velocity-lobby");
+                        if (velocityLobby != null) {
+                            sendPlayerToServer(player, velocityLobby.toString());
+                        }
+                    }
+                }
             }
         }
         try {
@@ -302,9 +328,7 @@ public class pillars implements CommandExecutor, TabCompleter {
         } catch (InterruptedException e) {
             throw new RuntimeException(e);
         }
-        Bukkit.getScheduler().runTask(plugin, () -> {
-            DeleteWorld(worldName);
-        });
+        Bukkit.getScheduler().runTask(plugin, () -> DeleteWorld(worldName));
         gameMode.remove(worldName);
         gameArena.remove(worldName);
         gameTimers.remove(worldName);
@@ -312,10 +336,10 @@ public class pillars implements CommandExecutor, TabCompleter {
         activeGames.remove(worldName);
     }
 
-    public static Boolean InitPlayerSpawns(String worldName, List<UUID> gamePartyList, Double circleDiameter, Integer spawnY, Integer pillarHeight, String pillarBlocks) {
-        Integer playerCount = gamePartyList.size();
+    public static void InitPlayerSpawns(String worldName, List<UUID> gamePartyList, Double circleDiameter, Integer spawnY, Integer pillarHeight, String pillarBlocks) {
+        int playerCount = gamePartyList.size();
         if (circleDiameter == 0) {
-            circleDiameter = СalculateDiameter(playerCount, 7);
+            circleDiameter = CalculateDiameter(playerCount, 7);
         }
         List<double[]> spawnPoints = GetCirclePoints(circleDiameter, playerCount, 0, 0);
         FileConfiguration config = plugin.getConfig();
@@ -360,23 +384,31 @@ public class pillars implements CommandExecutor, TabCompleter {
                 spawnSettings.put("Block", pillarBlocks);
                 spawnSettings.put("World", worldName);
                 playerSpawnSettings.put(playerUUID, spawnSettings);
-            } else {
+             } else {
                 Player player = Bukkit.getPlayer(playerUUID);
+                assert player != null;
                 player.teleport(spawnLoc);
                 player.setGameMode(GameMode.SURVIVAL);
                 player.getInventory().clear();
                 player.getEnderChest().clear();
-                player.setHealth(player.getMaxHealth());
+                var maxHealthAttr = player.getAttribute(Attribute.MAX_HEALTH);
+                if (maxHealthAttr != null) {
+                    double maxHealth = maxHealthAttr.getDefaultValue();
+                    if (maxHealth > 0) {
+                        player.setHealth(maxHealth);
+                    }
+                }
                 player.setFoodLevel(20);
                 player.setSaturation(5.0f);
                 gameProgress.get(worldName)[0]++;
+                assert world != null;
                 for (Player worldPlayer : world.getPlayers()) {
                     if (worldPlayer != null && worldPlayer.isOnline()) {
                         for (String msg : joinMessage) {
-                            worldPlayer.sendMessage(MiniMessage.miniMessage().deserialize(msg
-                                            .replace("%player%", player.getName())
-                                            .replace("%joined_players%", Integer.toString(gameProgress.get(worldName)[0]))
-                                            .replace("%required_players%", Integer.toString(gameProgress.get(worldName)[1]))
+                            worldPlayer.sendMessage(MM.deserialize(msg,
+                                    Placeholder.parsed("player", player.getName()),
+                                    Placeholder.parsed("joined_players", Integer.toString(gameProgress.get(worldName)[0])),
+                                    Placeholder.parsed("required_players", Integer.toString(gameProgress.get(worldName)[1]))
                             ));
                         }
                     }
@@ -384,17 +416,20 @@ public class pillars implements CommandExecutor, TabCompleter {
                 CreatePillar(pillarX, spawnY, pillarZ, pillarHeight, pillarBlocks, worldName);
             }
         }
-        return true;
     }
 
+    @SuppressWarnings("BusyWait")
     public static void StartGameItemsCycle(String worldName, Boolean debugMode, Map<String, String> settings, ConfigurationSection mode ) {
-        String selectedMode = settings.getOrDefault("mode", "items").toString();
+        String selectedMode = settings.getOrDefault("mode", "items");
         if (mode == null) {
-            getLogger().warning("Не удалось найти режим: " + selectedMode);
+            plugin.getLogger().warning("Не удалось найти режим: " + selectedMode);
             return;
         }
 
-        List<Player> alivePlayers = Bukkit.getWorld(worldName).getPlayers().stream()
+        World world = Bukkit.getWorld(worldName);
+        if (world == null) return;
+
+        List<Player> alivePlayers = world.getPlayers().stream()
                 .filter(player -> player.getGameMode() == GameMode.SURVIVAL)
                 .collect(Collectors.toList());
 
@@ -402,54 +437,67 @@ public class pillars implements CommandExecutor, TabCompleter {
             if ( !debugMode ) {
                 if ( alivePlayers.size() <= 1 ) break;
             } else {
-                if ( alivePlayers.size() < 1 ) break;
+                if (alivePlayers.isEmpty()) break;
             }
             for (int i = 0; i < Integer.parseInt(settings.getOrDefault("itemGiveDelay", "8")); i++) {
                 Integer timer = Integer.parseInt(settings.getOrDefault("itemGiveDelay", "8"))-i;
                 String timer_format = format(timer, i);
 
-                gameTimerF.put(worldName, timer_format.toString());
+                gameTimerF.put(worldName, timer_format);
                 gameTimers.put(worldName, timer.toString());
                 try {
                     Thread.sleep(1000);
                 } catch (InterruptedException e) {
+                    Thread.currentThread().interrupt();
                     throw new RuntimeException(e);
                 }
-                alivePlayers = Bukkit.getWorld(worldName).getPlayers().stream()
-                        .filter(player -> player.getGameMode() == GameMode.SURVIVAL)
-                        .collect(Collectors.toList());
+                World currentWorld = Bukkit.getWorld(worldName);
+                if (currentWorld != null) {
+                    alivePlayers = currentWorld.getPlayers().stream()
+                            .filter(player -> player.getGameMode() == GameMode.SURVIVAL)
+                            .toList();
+                }
                 if ( !debugMode ) {
                     if ( alivePlayers.size() <= 1 ) break;
                 } else {
-                    if ( alivePlayers.size() < 1 ) break;
+                    if ( alivePlayers.isEmpty() ) break;
                 }
             }
             if ( !debugMode ) {
                 if ( alivePlayers.size() <= 1 ) break;
             } else {
-                if ( alivePlayers.size() < 1 ) break;
+                if ( alivePlayers.isEmpty() ) break;
             }
-            for (Player player : Bukkit.getWorld(worldName).getPlayers()) {
-                if (player != null && player.isOnline()) {
-                    if (player.getGameMode() == GameMode.SURVIVAL) {
-                        if (mode != null && mode.getBoolean("enabled", false)) {
-                            List<String> commands = mode.getStringList("commands");
-                            if (!commands.isEmpty()) {
-                                Bukkit.getScheduler().runTask(plugin, () -> {
-                                    Random random = new Random();
-                                    Integer random_int = random.nextInt(101) - 50;
-                                    String randomCommand = commands.get(random.nextInt(commands.size()));
-                                    randomCommand = randomCommand
-                                            .replace("%player%", player.getName())
-                                            .replace("%world%", worldName)
-                                            .replace("%random-int%", random_int.toString())
-                                            .replace("%randomItem%", getRandomBlockMaterial().name());
-                                    Bukkit.dispatchCommand(Bukkit.getConsoleSender(), randomCommand);
-                                });
+            World currentWorld = Bukkit.getWorld(worldName);
+            if (currentWorld != null) {
+                for (Player player : currentWorld.getPlayers()) {
+                    if (player != null && player.isOnline()) {
+                        if (player.getGameMode() == GameMode.SURVIVAL) {
+                            if (mode.getBoolean("enabled", false)) {
+                                List<String> commands = mode.getStringList("commands");
+                                if (!commands.isEmpty()) {
+                                    Bukkit.getScheduler().runTask(plugin, () -> {
+                                        Random random = new Random();
+                                        int random_int = random.nextInt(101) - 50;
+
+                                        String rawCommand = commands.get(random.nextInt(commands.size()));
+
+                                        Component parsedComponent = MM.deserialize(rawCommand,
+                                                Placeholder.unparsed("player", player.getName()),
+                                                Placeholder.unparsed("random-int", Integer.toString(random_int)),
+                                                Placeholder.unparsed("random-item", UtilsManager.getRandomBlockMaterial().name()),
+                                                Placeholder.unparsed("world", worldName)
+                                        );
+
+                                        String randomCommand = PlainTextComponentSerializer.plainText().serialize(parsedComponent);
+
+                                        Bukkit.dispatchCommand(Bukkit.getConsoleSender(), randomCommand);
+                                    });
+                                }
                             }
-                        }
-                        if (mode != null && mode.getBoolean("random-item", false)) {
-                            player.getInventory().addItem(new ItemStack(getRandomBlockMaterial(), 1));
+                            if (mode.getBoolean("random-item", false)) {
+                                player.getInventory().addItem(new ItemStack(UtilsManager.getRandomBlockMaterial(), 1));
+                            }
                         }
                     }
                 }
